--- a/app/src/main/res/layout/activity_new_main.xml
+++ b/app/src/main/res/layout/activity_new_main.xml
@@ -22,8 +22,8 @@
             android:id="@+id/infoText"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="45dp"
-            android:textSize="20dp" />
+            android:layout_marginTop="35dp"
+            android:textSize="16dp" />
 
         <EditText
             android:layout_width="wrap_content"
@@ -31,10 +31,9 @@
             android:inputType="textPersonName"
             android:ems="10"
             android:id="@+id/nameEditText"
-            android:layout_marginTop="20dp"
             android:layout_below="@+id/infoText"
             android:layout_centerHorizontal="true"
-            android:singleLine="false"
+            android:layout_marginTop="20dp"
             android:hint="請輸入你的名字" />
 
         <RadioGroup
@@ -49,22 +48,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="小火龍"
-                android:id="@+id/radioButton"
-                android:checked="false" />
+                android:id="@+id/radioButton" />
 
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="傑尼龜"
-                android:id="@+id/radioButton2"
-                android:checked="false" />
+                android:id="@+id/radioButton2" />
 
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="妙蛙種子"
-                android:id="@+id/radioButton3"
-                android:checked="false" />
+                android:id="@+id/radioButton3" />
         </RadioGroup>
 
         <Button
@@ -77,5 +73,4 @@
             android:layout_marginTop="20dp" />
 
     </RelativeLayout>
-
 </LinearLayout>
